@@ -2503,6 +2503,20 @@ $wgMessageStructure = array(
 		'iranian-calendar-m11',
 		'iranian-calendar-m12',
 	),
+	'higri-dates' => array(
+		'higri-calendar-m1',
+		'higri-calendar-m2',
+		'higri-calendar-m3',
+		'higri-calendar-m4',
+		'higri-calendar-m5',
+		'higri-calendar-m6',
+		'higri-calendar-m7',
+		'higri-calendar-m8',
+		'higri-calendar-m9',
+		'higri-calendar-m10',
+		'higri-calendar-m11',
+		'higri-calendar-m12',
+	),
 	'hebrew-dates' => array(
 		'hebrew-calendar-m1',
 		'hebrew-calendar-m2',
